--- a/errorpage.html
+++ b/errorpage.html
@@ -1,1 +1,1 @@
-<html><body>Deportes version no more available please install spectrum sprotsNet </body></html>
+<b>Deportes version no more available please install spectrum sprotsNet </b>
