--- a/errorpage.html
+++ b/errorpage.html
@@ -1,1 +1,3 @@
 <b>Deportes version no more available please install spectrum sprotsNet </b>
+<a href="http://market.android.com/details?id=com.google.earth" target="_blank">Download for Android</a>
+
